# mazengine

./: .clang-format  .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  Doxyfile  Makefile  Mazzycat  README-scamper.md  README.md  README.org  SConstruct  TODO.org  setup.py
data/: settings.yaml  tile_editor.yaml  tile_test.yaml
data/tiles/: a.yaml  telst.yaml  test-scamper.yaml  test-scamper1.yaml  test.yaml
docs/: DESIGN.org  README.md
include/: dev.cpp  dev_init.cpp  element.h  engine.cpp  entity.cpp  entity.h  font.h  game.h  geometry.h  igame.h  io_2d_mouse.h  io_2d_no_mouse.cpp  io_2d_no_mouse.h  io_mouse.h  mazengine.h  mazengine_dev.h  mazengine_py.h  menu.h  player.cpp  player.h  texture.h  tile_entity.h  tile_game.cpp  tile_game.h  tile_layer.h  tile_map.cpp  tile_map.h  tile_player.h  tile_renderer.h  u_game.h
include/mazengine/: audio.h  element.h  game.h  geometry.h  igame.h  io.h  io_2d_mouse.h  io_2d_no_mouse.h  io_mouse.h  mazengine.h  menu.h  texture.h  tiles.h  ugame.h
include/mazengine/tiles/: collision.h  display.h  editor.h  entity.h  tile.h
spec/: schema.Game.yaml  schema.IGame.yaml  schema.Mazzycat.yaml  schema.Menu.yaml  schema.tiles.Display.yaml
src/: CMakeLists.txt  audio.cc  dev.cc  dev.cpp  dev_init.cpp  engine.cc  engine.cpp  entity.cpp  future.cc  geometry.cc  igame.cc  io_2d_mouse.cc  io_2d_mouse.cpp  io_2d_no_mouse.cc  io_2d_no_mouse.cpp  io_mouse.cc  maz_rb.cc  mazgame.cc  mazmodule.cc  mazscript.cc  mazzycat.cc  menu.cc  menu.cpp  object.cc  player.cpp  texture.cc  tile_display.cc  tile_editor.cc  tile_entity.cc  tile_entity.cpp  tile_game.cc  tile_game.cpp  tile_map.cc  tile_map.cpp  tile_player.cc  tile_player.cpp  tile_renderer.cc  tile_renderer.cpp  tiles.cc  u_game.cc  (+2 more)
src/mazengine/: element.h  elements.h  entity_game.h  igame.h  io_2d_mouse.h  io_2d_no_mouse.h  io_mouse.h  mazengine.h  mazgame.h  mazobject.h  menu.h  object.h  tile_entity.h  tile_game.h  tile_layer.h  tile_map.h  tile_player.h  tile_renderer.h  u_game.h  ugame.h
src/util/: CMakeLists.txt  tile_map_editor.cc
test/: CMakeLists.txt  test.cpp
